Fix natural/min widht calculations for empty grids

https://bugzilla.gnome.org/show_bug.cgi?id=660139